--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>FileLaunch</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body style="background-color: #000000;">
   <div class="hero">
     <button class="install-button">Install</button>
     <p class="subtitle">Download and install our latest file today!</p>
